--- a/p8105_hw2_sc5978.md
+++ b/p8105_hw2_sc5978.md
@@ -25,18 +25,6 @@ library(tidyverse)
 ``` r
 library(readxl)
 library(dplyr)
-library(janitor)
-```
-
-    ## 
-    ## Attaching package: 'janitor'
-    ## 
-    ## The following objects are masked from 'package:stats':
-    ## 
-    ##     chisq.test, fisher.test
-
-``` r
-library(forcats)
 ```
 
 # Problem 1
@@ -293,7 +281,7 @@ observations and 6 variables and tells us about basic demographic
 information were measured at the study baseline, age of MCI onset, and
 whether the participate is a APOE4 carrier. In the baseline dataset, 484
 participants were recruited, and of these 97 develop MCI. The average
-baseline age is 70.2628866. 0.6521739 of women in the study are APOE4
+baseline age is 65.61 years. 0.65 of women in the study are APOE4
 carriers.
 
 Import, clean, and tidy the dataset of longitudinally observed biomarker
@@ -400,14 +388,12 @@ unique (participants_only_in_amyloid$id)
     ## [361] 462 463 464 465 466 467 468 469 470 472 473 474 475 476 477 478 479 480
     ## [379] 481 482 483 484 485 486 487 488 489 490 491 492 493 494 495
 
-Findings: There are 3participants appear in only the baseline dataset.
-Their ids are `unique (participants_only_in_baseline$id)`, which means
-that there isn’t follow-up data about their amyloid ratio. There are 393
-participants appear in only the amyloid dataset. Their ids are
-`unique (participants_only_in_amyloid$id)`, which means that they do not
-have basic demographic information that were measured at the study
-baseline or they do not meet the stated inclusion criteria (i.e. no MCI
-at baseline).
+Findings: There are 3 participants appear in only the baseline dataset.
+Their ids are 14, 49, 268, which means that there isn’t follow-up data
+about their amyloid ratio. There are 393 participants appear in only the
+amyloid dataset, which means that they do not have basic demographic
+information that were measured at the study baseline or they do not meet
+the stated inclusion criteria (i.e. no MCI at baseline).
 
 Combine the demographic and biomarker datasets so that only participants
 who appear in both datasets are retained.
@@ -434,11 +420,12 @@ str(prob3)
 
 Describe the resulting dataset: The `prob3` datasets combine the
 demographic and biomarker datasets including only participants who
-appear in both datasets. There are 94 participants in the dataset of 8
-variables. The dataset tells us about basic demographic information were
-measured at the study baseline, age of MCI onset, whether the
-participate is a APOE4 carrier, and the amyloid β 42/40 ratio in
-different time (in years) elapsed since the study baseline.
+appear in both datasets. There are 470 observations of 94 participants
+in the dataset of 8 variables. The dataset tells us about basic
+demographic information were measured at the study baseline, age of MCI
+onset, whether the participate is a APOE4 carrier, and the amyloid β
+42/40 ratio in different time (in years) elapsed since the study
+baseline.
 
 Export the result as a CSV to your data directory:
 
